<resources>
    <string name="app_name">AutoCareApp</string>

    <!--  fragment login  -->
    <string name="title_login">Вход в аккаунт</string>
    <string name="description_login">Заполните поля</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="forget_pwd">Забыли пароль?</string>
    <string name="btn_login">Выполнить вход</string>
    <string name="required">Обязательное поле</string>
    <string name="create_account">Создать аккаунт</string>

    <!--  fragment register user  -->
    <string name="title_reg_user">Регистрация</string>
    <string name="name">Имя</string>
    <string name="btn_reg_user">Зарегистрироваться</string>
    <string name="have_account">Уже есть аккаунт?</string>
    <!--  toast  -->
    <string name="http_error_reg_user">Некорректные данные</string>
    <string name="http_error_service">Не удалось получить данные</string>


    <!--  fragment register auto  -->
    <string name="title_reg_auto">Ваш автомобиль</string>
    <string name="brand">Марка</string>
    <string name="model">Модель</string>
    <string name="mileage">Пробег</string>
    <string name="year">Год выпуска</string>
    <string name="btn_reg_auto">Завершить</string>
    <string name="skip_reg_auto">Пропустить шаг</string>

    <!--  fragment forgot pwd  -->
    <string name="title_recover_pwd">Восстановление пароля</string>
    <string name="btn_get_token">Получить токен</string>
    <string name="token">Временный токен</string>
    <string name="new_pwd">Новый пароль</string>
    <string name="btn_new_pwd">Изменить пароль</string>


    <!-- Добавление в календарь -->
    <string name="your_car_toolbar">Машина</string>
    <string name="btn_add">Добавить запись</string>

    <!--  heared  -->
    <string name="your_login_Header">Автовладелец</string>


    <!-- Названия для bottom_nav -->
    <string name="item_calendar">Календарь</string>
    <string name="item_history">История</string>

    <!-- Названия для drawer_menu -->
    <string name="nav_acc">Аккаунт</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_exit">Выйти</string>

    <string name="open_nav">open main nav</string>
    <string name="close_nav">close main nav</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="add_service">Добавить услугу</string>
    <string name="dialog_save">Сохранить</string>
    <string name="dialog_cancel">Отменить</string>
    <string name="complete_day">Вы уверены, что хотите завершить день?</string>


</resources>