<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.auth.RegisterAutoFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dp"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_reg_auto"
                android:textColor="@color/primary_log_reg"
                android:textSize="32sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_login"
                android:alpha="0.7"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/brandContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="custom"
                app:errorEnabled="true"
                android:layout_marginBottom="10dp"
                app:errorIconDrawable="@drawable/ic_error_24"
                app:endIconDrawable="@drawable/ic_check_circle_24"
                android:hint="@string/brand">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/brandEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/modelContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="custom"
                app:errorEnabled="true"
                android:layout_marginBottom="10dp"
                app:errorIconDrawable="@drawable/ic_error_24"
                app:endIconDrawable="@drawable/ic_check_circle_24"
                android:hint="@string/model">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/modelEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/mileageContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_error_24"
                app:endIconDrawable="@drawable/ic_check_circle_24"
                android:hint="@string/mileage">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mileageEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>



            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/btnRegAuto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_reg_auto"
                android:textColor="@color/secondary_text_log_reg"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/linkToCalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/skip_reg_auto"
                android:layout_gravity="center"
                android:alpha="0.7"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>