<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.auth.RecoverPasswordFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dp"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_recover_pwd"
                android:textColor="@color/primary_log_reg"
                android:textSize="32sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_login"
                android:alpha="0.7"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/tokenContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_error_24"
                app:endIconDrawable="@drawable/ic_check_circle_24"
                android:hint="@string/token">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tokenEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/pwdNewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_error_24"
                android:hint="@string/new_pwd">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pwdNewEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnChangePwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_new_pwd"
                android:textColor="@color/secondary_text_log_reg"
                android:textStyle="bold"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>